# nanograd

./: .gitignore  LICENSE  README.md  SimpleTests.ipynb  TestGround.ipynb  autograd.py  dataloader.py  datasets.py  engine.py  functions.py  initializers.py  models.py  nn.py  notes.md  plan.md  pyproject.toml  tensor.py  tensor_refactor.py  test_initializers.py  test_loss_fn.py  test_tensor.py  test_tensor_refactor.py  tests.py
.ipynb_checkpoints/: TestGround-checkpoint.ipynb
examples/: audio_autoencoder.py  spiral_classifier.py  vae_toy.py  xor_classifier.py
extra_stuff/: autograd.py  better_nn.py  learned.md  notes.md  old_tensor.py  plan.md  refactor_notes.md  shape_research.py  test_old_tensor.py
nanograd/: __init__.py  dataloader.py  datasets.py  functions.py  initializers.py  models.py  nn.py  tensor.py
tests/: test_initializers.py  test_loss_fn.py  test_tensor.py
