[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanograd"
version = "0.1.0"
description = "NumPy-based neural network microframework with a tiny autograd engine."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest", "torch", "scipy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanograd*"]
